[gd_scene load_steps=6 format=2]

[ext_resource path="res://Objetos/Scripts/GameOver.gd" type="Script" id=1]
[ext_resource path="res://Themes/MenuThemeGO.tres" type="Theme" id=2]
[ext_resource path="res://Objetos/Music/Level Up.wav" type="AudioStream" id=3]
[ext_resource path="res://Objetos/Scripts/MusicLoop.gd" type="Script" id=4]

[sub_resource type="StreamTexture" id=1]

flags = 4
load_path = "res://.import/Sky64.png-65d9a2d4620229f23916cf5ff7b56561.stex"

[node name="Node" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="ColorRect" type="TextureRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = SubResource( 1 )
expand = true
stretch_mode = 0

[node name="CenterContainer" type="VBoxContainer" parent="." index="1"]

anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -182.0
margin_right = 182.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Mouse" ]

[node name="Label" type="Label" parent="CenterContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 364.0
margin_bottom = 200.0
rect_min_size = Vector2( 0, 200 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = ExtResource( 2 )
text = "Game Over"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Hint", "Rect", "Size Flags", "Theme", "custom_colors", "custom_constants", "custom_fonts", "custom_styles" ]

[node name="Score" type="Label" parent="CenterContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 204.0
margin_right = 364.0
margin_bottom = 304.0
rect_min_size = Vector2( 0, 100 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = ExtResource( 2 )
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Hint", "Rect", "Size Flags", "Theme", "custom_colors", "custom_constants", "custom_fonts", "custom_styles" ]

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 308.0
margin_right = 364.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
alignment = 0
_sections_unfolded = [ "Anchor", "Grow Direction", "Hint", "Margin", "Size Flags" ]

[node name="MainMenubtn" type="Button" parent="CenterContainer/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 364.0
margin_bottom = 96.0
rect_min_size = Vector2( 0, 96 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Return to Title"
flat = false
align = 1
_sections_unfolded = [ "Focus", "Mouse", "Rect", "Theme" ]

[node name="Restartbtn" type="Button" parent="CenterContainer/VBoxContainer" index="1"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 100.0
margin_right = 364.0
margin_bottom = 196.0
rect_min_size = Vector2( 0, 96 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Restart"
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." index="2"]

stream = ExtResource( 3 )
volume_db = -5.0
pitch_scale = 1.0
autoplay = true
mix_target = 0
bus = "Master"
script = ExtResource( 4 )

[connection signal="pressed" from="CenterContainer/VBoxContainer/MainMenubtn" to="." method="_on_MainMenubtn_pressed"]

[connection signal="pressed" from="CenterContainer/VBoxContainer/Restartbtn" to="." method="_on_Restartbtn_pressed"]


